# index_chan

./: .gitignore  .indexchanignore  .kirorules  .mcp.json  CONTRIBUTING.en.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  GEMINI_API_SETUP.md  LICENSE  PUBLISH_CHECKLIST.md  README.en.md  README.ja.md  README.md  SECURITY.md  build.rs  build_log.txt  chat_history.json  graph_from_db.json
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.index-chan/: conversation_graph.json  index.json
.kiro/steering/: index-chan-usage.md  japanese-output.md
Doc/: README.md
Doc/MVP/: MVP_ロードマップ.md  Phase1.5_LLM統合.md  Phase1.5_最終報告.md  Phase1.5_残タスク.md  Phase1_デッドコード検出.md  現在の機能.md
Doc/MVP/archive/: Phase1.5_Week2_完了サマリー.md  Phase1.5_Week2_進捗報告.md  Phase1.5_完了報告.md
Doc/企画書/: 企画書_コード依存グラフ型検索システム.md  応用例_会話依存グラフシステム.md  応用例_関数ブロック知識書庫システム.md
Doc/設計書/: 設計書_コード依存グラフ型検索システム.md
Doc/調査/: LLM推論_実機テスト結果.md  OSS_参考プロジェクト分析.md
docs/: DESIGN.md  README.md  ROADMAP.md  USAGE.md  VISION.md
src/: annotator.rs  backup.rs  chat_server.rs  cleaner.rs  database.rs  detector.rs  embedding.rs  embedding_cache.rs  error_helper.rs  exporter.rs  filter.rs  graph.rs  lib.rs  main.rs  parser.rs  reporter.rs  scanner.rs  web_server.rs
src/conversation/: analyzer.rs  graph.rs  graph_exporter.rs  mod.rs  prompt_history.rs  topic.rs
src/database/: database.rs  mod.rs  models.rs
src/database_legacy/: database.rs  schema.rs
src/llm/: analyzer.rs  config.rs  context.rs  downloader.rs  function_calling.rs  gemini.rs  mod.rs  model.rs
src/mcp/: changes.rs  context.rs  mod.rs  protocol.rs  server.rs  tools.rs
src/search/: embeddings.rs  graph_search.rs  index.rs  mod.rs  query.rs
static/: chat-graph.html  index.html
test_project/: .indexchanignore  chat_history.json  chat_history_topics.json  clean_test.ts  conversation_graph.json  prompt_history.json  sample.ts  test_cases.ts
test_project/.index-chan/: test_project.db
test_rust_project/: main.rs  sample.rs
