[package]
name = "index-chan"
version = "0.1.0"
edition = "2021"
authors = ["index-chan contributors"]
description = "Dead code detection CLI for TypeScript projects"
license = "MIT"
repository = "https://github.com/MERY-Sheep/index_chan"
keywords = ["typescript", "dead-code", "cli", "ast", "llm"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "index_chan"
path = "src/lib.rs"

[[bin]]
name = "index-chan"
path = "src/main.rs"

[features]
default = []
web = ["axum", "tower", "tower-http"]
db = ["sqlx", "notify", "notify-debouncer-full"]
llm = []
search = []
# GPU acceleration features removed (Gemini API使用のため不要)

[dependencies]
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
anyhow = "1.0"
colored = "2.1"
ignore = "0.4"  # .indexchanignore support
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# LLM integration (Phase 1.5) - Gemini API only
# Candle/Qwen関連の依存は削除済み

# Web visualization (Phase 3.2)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }

# Database (Phase 4)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros"], optional = true, default-features = false }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6.1", optional = true }
notify-debouncer-full = { version = "0.3", optional = true }
